# NeuroFluxLIVE

./: .gitignore  LICENSE  README.md  RealTimeDataAbsorber.py  __init__.py  config.yaml  correlation_rag_module.py  demo_workflow.py  evolutionary_learner.py  file_watcher.py  main.py  multimodal_dataset_manager.py  predictive_coding_temporal_model.py  premium_workflow.py  pyproject.toml  requirements-dev.txt  requirements.txt  self_learning_bot.py  sitecustomize.py  synergy_workflow.py  token_sequence_pattern_manager.py  ultimate_workflow.py
.github/workflows/: pypi-release.yml  python-package.yml
analysis/: __init__.py  dataset_analyzer.py  dataset_quality.py  hyper_prompt_optimizer.py  meta_prompt_optimizer.py  omni_prompt_optimizer.py  prompt_augmenter.py  prompt_bayes_optimizer.py  prompt_optimizer.py  prompt_rl_optimizer.py  synergized_prompt_optimizer.py  unified_prompt_optimizer.py
assessment/: rubric_grader.py
data/: auto_data_collector.py  dataset_loader.py
digital_literacy/: source_evaluator.py
docs/: automatic_data_retrieval.md  benchmarks.md  dataset_quality.md  persistent_memory.md
eval/: benchmark_sprout_agi.py  gpt2_benchmark.py  language_model_evaluator.py
interface/: CustomLabelsDataset.py  Gui.html  premium_cli.py  visual_cli.py  ws_server.py
models/: __init__.py  model_wrapper.py  vae_compressor.py
peer_collab/: collaboration_server.py
research_workflow/: topic_selector.py
security/: auth_and_ethics.py
simulation_lab/: experiment_simulator.py  gym_autonomous_trainer.py
tests/: test_auto_data_collector.py  test_collaboration_server.py  test_dataset_index_cache.py  test_dataset_quality.py  test_file_watcher.py  test_hyper_prompt_optimizer.py  test_lmdb_cache.py  test_multimodal_dataset.py  test_omni_prompt_optimizer.py  test_premium_cli.py  test_premium_workflow.py  test_prompt_augmenter.py  test_realtime_absorber.py  test_rubric_grader_simple.py  test_search_academic_api.py  test_self_learning_bot.py  test_synergized_prompt_optimizer.py  test_synergy_workflow.py  test_unified_prompt_optimizer.py  test_vae_compressor.py  test_visual_cli.py
train/: prompt_update_callback.py  trainer.py
utils/: __init__.py  colors.py  tensor_ops.py
web/: index.html  main.ts
webapp/: manifest.webmanifest  useAmbientAudio.ts
