[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SelfResearch"
version = "1.0.2"
description = "Unified pipeline for self-learning agents with real-time data ingestion"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "SelfResearch Team"}
]
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "flask",
    "scikit-learn",
    "requests",
    "beautifulsoup4",
    "matplotlib",
    "scikit-optimize",
    "trl",
    "rich",
    "faiss-cpu",
    "opencv-python",
    "soundfile",
    "aiohttp",
    "psutil",
    "pillow",
    "pyyaml",
    "tqdm",
    "torchvision",
    "lmdb",
    "msgpack",
    "websockets"
]

# ------------------------------------------------------------------
# Tell setuptools that the *current folder* (“.”) IS the package.
# ------------------------------------------------------------------
[tool.setuptools]
package-dir = { "SelfResearch" = "" }   #  ← key fix
[tool.setuptools.packages.find]
where = ["."]
include = ["SelfResearch*"]
